extracting user.html

--- a/rumbl/web/templates/user/show.html.eex
+++ b/rumbl/web/templates/user/show.html.eex
@@ -1,7 +1,7 @@
 <h1> User <%= @user.id %></h1>
 <table class="table">
     <tr>
-        <td>  First Name </td>
+        <td> First Name </td>
         <td><%= first_name(@user) %></td>
     </tr>
      <tr>
@@ -9,3 +9,5 @@
         <td><%= @user.email %></td>
     </tr>
 </table>
+
+<%= link " <- Back to List", to: user_path(@conn, :index) %>
