--- a/rumbl/web/templates/user/index.html.eex
+++ b/rumbl/web/templates/user/index.html.eex
@@ -1,10 +1,6 @@
 <h1>Listing Users</h1>
 <table class="table">
 <%= for user <- @users do %>
-    <tr>
-        <td> <%= user.id %> </td>
-        <td> <%= first_name(user) %> </td>
-        <td> <%= link "View", to: user_path(@conn, :show, user.id) %> </td>
-    </tr>
+    <%= render "user.html", user: user %>
 <% end %>
 </table>
