--- a/rumbl/web/templates/user/index.html.eex
+++ b/rumbl/web/templates/user/index.html.eex
@@ -1,6 +1,6 @@
 <h1>Listing Users</h1>
 <table class="table">
 <%= for user <- @users do %>
-    <%= render "user.html", user: user %>
+    <%= render "user.html", user: user, conn: @conn %>
 <% end %>
 </table>
