--- a/rumbl/web/templates/layout/app.html.eex
+++ b/rumbl/web/templates/layout/app.html.eex
@@ -14,8 +14,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
+          <ol class="breadcrumb text-right">
             <%= if @current_user  do %>
             <li> <%= link @current_user.name, to: "#" %> </li>
             <li> <%= link "Logout", to: session_path(@conn, :delete, @current_user), method: "delete" %></li>
@@ -23,8 +22,7 @@
               <li> <%= link "Register", to: user_path(@conn, :new) %></li>
               <li> <%= link "Login", to: session_path(@conn, :new) %></li>
             <% end %>
-          </ul>
-        </nav>
+          </ol>
         <span class="logo"></span>
       </header>
 
