--- a/rumbl2/web/templates/page/index.html.eex
+++ b/rumbl2/web/templates/page/index.html.eex
@@ -1,4 +1,6 @@
 <div class="jumbotron">
+  
+  <h1> Upgrading myself with </h1>
   <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
   <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
 </div>
