--- a/rumbl2/web/templates/page/index.html.eex
+++ b/rumbl2/web/templates/page/index.html.eex
@@ -6,5 +6,5 @@
 </div>
 
 <div class="row marketing">
-TTrying to take the Feynman approach to learn something
+TTrying to take the Feynman approach to learn something.
 </div>
